Maybe fixed bug with playing game on IOS

--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,10 @@ button:hover {
 
 /*** Header ***/
 
+ul {
+    list-style: none;
+}
+
 .menu-list li a {
     text-decoration: none;
     color: var(--text-color);
